Radio Field: Prevent Misalignment in the Block Editor

--- a/base/css/admin.less
+++ b/base/css/admin.less
@@ -758,7 +758,6 @@ div.siteorigin-widget-form {
 			}
 
 			&:checked::before {
-				float: none;
 				height: 11px;
 				margin: 2px;
 				width: 11px;
